--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
 fastapi
 uvicorn[standard]
 google-generativeai>=0.4.0
-sentence-transformers
-scikit-learn
-numpy
-PyPDF2
-python-multipart
+python-dotenv
 pydantic
 
 
